--- a/PDNavigationController/Base.lproj/Main.storyboard
+++ b/PDNavigationController/Base.lproj/Main.storyboard
@@ -18,25 +18,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="12O-nR-iBn">
-                                <rect key="frame" x="104" y="308" width="167" height="51"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgD-iw-05m">
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
+                                <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="0.5" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Ifz-9I-9NF"/>
+                                </constraints>
+                                <state key="normal" title="pop last page"/>
+                                <connections>
+                                    <action selector="popToLastPage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iG2-Go-9E3"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N63-UL-A2j">
+                                <rect key="frame" x="0.0" y="567" width="375" height="50"/>
+                                <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="QWO-Gc-0Qg"/>
+                                </constraints>
+                                <state key="normal" title="pop to not sure page"/>
+                                <connections>
+                                    <action selector="popToPage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NFa-cW-tpG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="amr-FT-E4x">
+                                <rect key="frame" x="0.0" y="517" width="375" height="50"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="51" id="5Bw-B1-EdL"/>
-                                    <constraint firstAttribute="width" constant="167" id="ejr-Pi-bfd"/>
+                                    <constraint firstAttribute="height" constant="50" id="erQ-7I-xRD"/>
+                                </constraints>
+                                <state key="normal" title="pop to root page"/>
+                                <connections>
+                                    <action selector="popToRootPage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="z2V-dh-M0d"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="12O-nR-iBn">
+                                <rect key="frame" x="0.0" y="467" width="375" height="50"/>
+                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="1" alpha="0.4528842038" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="h1s-22-VPm"/>
                                 </constraints>
                                 <state key="normal" title="Push">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
                                 <connections>
-                                    <action selector="gotoNextPage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="iVF-rD-f8R"/>
+                                    <action selector="pushToNextPage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KxU-zI-2aI"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="12O-nR-iBn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cEx-Gr-SR5"/>
-                            <constraint firstItem="12O-nR-iBn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yfH-0I-YGZ"/>
+                            <constraint firstItem="N63-UL-A2j" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Hje-A4-5j5"/>
+                            <constraint firstItem="vgD-iw-05m" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="NOD-VY-pMY"/>
+                            <constraint firstItem="N63-UL-A2j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Roz-GS-2P2"/>
+                            <constraint firstItem="vgD-iw-05m" firstAttribute="top" secondItem="N63-UL-A2j" secondAttribute="bottom" id="SPN-cy-idR"/>
+                            <constraint firstItem="amr-FT-E4x" firstAttribute="top" secondItem="12O-nR-iBn" secondAttribute="bottom" id="XVb-yh-r9M"/>
+                            <constraint firstItem="amr-FT-E4x" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Xe0-0p-Nl9"/>
+                            <constraint firstItem="amr-FT-E4x" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ew0-ho-A4h"/>
+                            <constraint firstItem="vgD-iw-05m" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="ryh-DL-61T"/>
+                            <constraint firstItem="12O-nR-iBn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="sC2-Ao-Aua"/>
+                            <constraint firstItem="vgD-iw-05m" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="uAy-PT-8Dk"/>
+                            <constraint firstItem="12O-nR-iBn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ve3-qQ-ju6"/>
+                            <constraint firstItem="N63-UL-A2j" firstAttribute="top" secondItem="amr-FT-E4x" secondAttribute="bottom" id="wKv-vM-Gph"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
